frontend/tests/cases/positive/interface-simple-09.gr
data SimpleDT = SDT

interface Simple a where
  simple1 : a -> a;
  simple2 : a -> a -> a;
  simple3 : a -> a -> a -> a

-- instance with multiple bindings
instance Simple SimpleDT where
  simple1 x = x;
  simple2 x y = x;
  simple3 x y z = x
