frontend/tests/cases/negative/noInstanceForConstraintImpliedByUseOfMethodInFunConcrete.gr
interface Simple a where
  simple : a -> a

data A = A

-- 'A' is not an instance of 'Simple'
simple1 : A -> A
simple1 x = simple x
